#99 Read File From Path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,10 +25,13 @@ hoidanit.jwt.refresh-token-validity-in-seconds=8640000
 #config upload file
 ###
 # #default = 1MB
-# spring.servlet.multipart.max-file-size=50MB  
+spring.servlet.multipart.max-file-size=50MB
 
 # #default = 10 MB (form data)
-# spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+#base path
+hoidanit.upload-file.base-path=file:///D:/Java%20Project/Java%20Spring%20REST%20Ultimate%20For%20Beginners/upload/
 ###
 
 ###
