#100 Upload File Part 1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 #base path
-hoidanit.upload-file.base-path=file:///D:/Java%20Project/Java%20Spring%20REST%20Ultimate%20For%20Beginners/upload/
+hoidanit.upload-file.base-uri=file:///D:/Java%20Project/Java%20Spring%20REST%20Ultimate%20For%20Beginners/upload/
 ###
 
 ###
