#124 Hello Word with Spring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,15 @@ hoidanit.upload-file.base-uri=file:///D:/Java%20Project/Java%20Spring%20REST%20U
 spring.data.web.pageable.one-indexed-parameters=true
 
 ###
+#config email with Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=abc@gmail.com
+
+#Thay appy password
+spring.mail.password=12345
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+###
+#
