--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,10 +43,10 @@ spring.data.web.pageable.one-indexed-parameters=true
 #config email with Gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=abc@gmail.com
+spring.mail.username=***
 
 #Thay appy password
-spring.mail.password=12345
+spring.mail.password=***
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
