#127 Send Email with template part 3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,7 @@ spring.data.web.pageable.one-indexed-parameters=true
 #config email with Gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=***
+spring.mail.username=vanthoi0811@gmail.com
 
 #Thay appy password
 spring.mail.password=***
